# ithkuil

./: .gitignore  CLAUDE.md  COMPARISON.md  EXAMPLES.md  GlossTest.hs  PARSER_PLAN.md  README.md  README.rst  abbreviations.py  draw_charts.sh  extract_ca_table.py  extract_lexicon.py  extract_pronunciation.py  extract_suffixes.py  grammar.py  ime.py  ithkuil.cabal  lexicon.htm  notes  phonology.py  pronunciation_examples  requirements.txt  runtests.sh  setup.py  shell.nix  test_extract_pronunciation.py  test_grammar.py  writing.py
app/: Gloss.hs
charts/: bottom_ending_chart.py  consonant_characters.py  consonant_chart.py  primary_characters.py  side_ending_chart.py
data/: Lexicon.hs  Lexicon.lean  affixes.json  affixes.tsv  ca.yaml  convert_lexicon.py  lexicon.ml  roots.json  roots.tsv  roots_v1.json  roots_v3.json  update_affixes.py
extract/: ca_table.py  convert_tables_yaml.py  lexicon.py  pronunciation.py  suffix.py  test_extract_pronunciation.py
grammar_reference/: README.md  affixes_reference.md  ch01_phonology.md  ch01_phonology_full.md  ch02_morpho-phonology.md  ch02_morphophonology_full.md  ch03_morphology.md  ch03_morphology_full.md  ch04_case.md  ch05_verbs.md  ch07_affixes.md  ch08_adjuncts.md  ch11_syntax.md  ch13_numbers.md  lexicon_searchable.md  morphology.md  v3_index.md  v3_lexicon.md
ithkuil/: abbreviations.py  api.py  extract_lexicon.py  grammar.py  grammar_tables.py  ime.py  phonology.py  util.py
ithkuil/writing/: __init__.py  bottom_ending.py  common.py  consonant.py  diacritic.py  draw_letters.py  primary.py  side_ending.py  typeset.py  util.py
reference/: PDF_CONVERSION_FEATURES.md
reference/grammar/: ch09_referentials.md  ch12_script.md  phonotactics.md
script/: PLAN.md  build_font.py  glyphs.py
scripts/: consonant_chart.py  consonant_proportions.py  draw_letters.py  hook_test.py  width_test.py
source_material/: 07_suffixes.html  mistakes
src/Ithkuil/: Adjuncts.hs  Allomorph.hs  Compose.hs  Concatenation.hs  FullParse.hs  Gloss.hs  Grammar.hs  Lexicon.hs  Numbers.hs  Parse.hs  Phonology.hs  Referentials.hs  Render.hs  Script.hs  Validation.hs  WordType.hs
src/Ithkuil/V1/: Grammar.hs  Parse.hs
src/Ithkuil/V2/: Grammar.hs  Parse.hs
src/Ithkuil/V3/: Grammar.hs  Parse.hs
test/: Main.hs
tests/: test_grammar.py  test_phonology.py  test_writing.py
writing/: __init__.py  bottom_ending.py  common.py  consonant.py  side_ending.py
